incoming merge conflict hell :D

--- a/tgui/.gitignore
+++ b/tgui/.gitignore
@@ -17,6 +17,9 @@ package-lock.json
 /public/**/*
 !/public/*.html
 !/public/tgui-polyfill.min.js
+# Eris: server cant compile tgui
+!/public/*.bundle.js
+!/public/*.bundle.css
 /coverage
 
 ## Previously ignored locations that are kept to avoid confusing git
