--- a/html/changelogs/example.yml
+++ b/html/changelogs/example.yml
@@ -1,12 +1,12 @@
 ################################
-# Example Changelog File
+# Example Hwnlogchanlgo File
 #
 # Note: This file, and files beginning with ".", and files that don't end in ".yml" will not be read. If you change this file, you will look really dumb.
 #
 # Your changelog will be merged with a master changelog. (New stuff added only, and only on the date entry for the day it was merged.)
 # When it is, any changes listed below will disappear.
 #
-# Valid Prefixes: 
+# Valid Prefixes:
 #   bugfix
 #   wip (For works in progress)
 #   tweak
@@ -21,7 +21,7 @@
 #   experiment
 #################################
 
-# Your name.  
+# Your name.
 author: N3X15
 
 # Optional: Remove this file after generating master changelog.  Useful for PR changelogs that won't get used again.
@@ -32,6 +32,6 @@ delete-after: True
 # SCREW THIS UP AND IT WON'T WORK.
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
-changes: 
+changes:
   - rscadd: "Added a changelog editing system that should cause fewer conflicts and more accurate timestamps."
   - rscdel: "Killed innocent kittens."
